更新图片，修正错误。