@@ -4,6 +4,7 @@
 - hadoop 集群已经启动
 - mysql 已部署完毕
 - apache-hive-2.3.4-bin.tar.gz（位于/opt/tar下）
+- mysql-connector-java-5.1.32.jar（位于/opt/tar下）
 
 ---
 
@@ -27,7 +28,7 @@ mv ./apache-hive-2.3.4-bin ./hive
 cp /opt/tar/mysql-connector-java-5.1.32.jar /opt/apps/hive/lib/
 ```
 
-> 将 hadoop 中的 jline-0.0.94.jar 替换为 hive 中的 jline-2.12.jar：
+> 启动 hive 会出现一个警告，解决方案是升级 hadoop 的 jline 库。将 hadoop 中的 jline-0.0.94.jar 替换为 hive 中较新的 jline-2.12.jar：
 > ``` shell
 > # 备份 jline-0.0.94.jar（以防万一）
 > cd /opt/apps/hadoop/share/hadoop/yarn/lib
@@ -76,6 +77,68 @@ export HIVE_HOME=/opt/apps/hive
 export HIVE_CONF_DIR=$HIVE_HOME/conf
 ```
 
+编辑完后长这样：
+``` diff
+# Licensed to the Apache Software Foundation (ASF) under one
+# or more contributor license agreements.  See the NOTICE file
+# distributed with this work for additional information
+# regarding copyright ownership.  The ASF licenses this file
+# to you under the Apache License, Version 2.0 (the
+# "License"); you may not use this file except in compliance
+# with the License.  You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
+# Set Hive and Hadoop environment variables here. These variables can be used
+# to control the execution of Hive. It should be used by admins to configure
+# the Hive installation (so that users do not have to set environment variables
+# or set command line parameters to get correct behavior).
+#
+# The hive service being invoked (CLI etc.) is available via the environment
+# variable SERVICE
+
+
+# Hive Client memory usage can be an issue if a large number of clients
+# are running at the same time. The flags below have been useful in
+# reducing memory usage:
+#
+# if [ "$SERVICE" = "cli" ]; then
+#   if [ -z "$DEBUG" ]; then
+#     export HADOOP_OPTS="$HADOOP_OPTS -XX:NewRatio=12 -Xms10m -XX:MaxHeapFreeRatio=40 -XX:MinHeapFreeRatio=15 -XX:+UseParNewGC -XX:-UseGCOverheadLimit"
+#   else
+#     export HADOOP_OPTS="$HADOOP_OPTS -XX:NewRatio=12 -Xms10m -XX:MaxHeapFreeRatio=40 -XX:MinHeapFreeRatio=15 -XX:-UseGCOverheadLimit"
+#   fi
+# fi
+
+# The heap size of the jvm stared by hive shell script can be controlled via:
+#
+# export HADOOP_HEAPSIZE=1024
+#
+# Larger heap size may be required when running queries over large number of files or partitions.
+# By default hive shell scripts use a heap size of 256 (MB).  Larger heap size would also be
+# appropriate for hive server.
+
+
+# Set HADOOP_HOME to point to a specific hadoop install directory
+# HADOOP_HOME=${bin}/../../hadoop
+
+# Hive Configuration Directory can be controlled by:
+# export HIVE_CONF_DIR=
+
+# Folder containing extra libraries required for hive compilation/execution can be controlled by:
+# export HIVE_AUX_JARS_PATH=
++ export JAVA_HOME=/opt/apps/jdk
++ export HADOOP_HOME=/opt/apps/hadoop
++ export HIVE_HOME=/opt/apps/hive
++ export HIVE_CONF_DIR=$HIVE_HOME/conf
+```
+
 ---
 
 ## 5.配置 hive-site.xml
@@ -114,12 +177,6 @@ vi ./hive-site.xml
 </property>
 ```
 
-删除文件中system路径：
-``` shell
-#sed -i "s/要替换的/替换为/g" 文件路径
-sed -i "s/system://g" hive-site.xml
-```
-
 ---
 
 ## 6.schema 格式化
@@ -131,29 +188,27 @@ schematool -dbType mysql -initSchema
 
 ---
 
-## 7.新建 hive 数据库
-使用 mysql：
-``` shell
-mysql -root -p
-```
-
-新建数据库：
-``` sql
-create database hivedb;
-```
-![结果](images/6_2.png)
-
-退出 mysql：
-```shell
-exit
-```
-
----
-
-## 8.启动 hive
-执行：
+## 7.启动 hive
+启动 hive ：
 ```shell
 hive
 ```
-![结果](images/6_3.png)
-> 至此hive配置完毕
+
+如果出现这个报错：（绝对URI中的相对路径）
+![示意图](./images/7_1.png)
+
+解决方案是把 hive-site.xml 文件中绝对路径字眼 “system:” 全部删掉：
+``` shell
+# sed -i "s/要替换的/替换为/g" 文件路径
+sed -i "s/system://g" hive-site.xml
+```
+
+再次尝试启动 hive：
+```shell
+hive
+```
+
+成功：
+![结果](./images/7_2.png)
+
+> 至此 hive 配置完毕
